--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
+    "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
